syntax="proto3";
package order;

message EmptyResponse {}